実機にてtb不具合

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 						</p>
 						<p class="lp-catch__innerTextBoxText">
 							北海道の桜の香りと、<br>
-							天然植物由来成分によるしっとり感が評判となり<br>
-							「北海道のお土産」と持ち帰った道外の方からも<br>
+							天然植物由来成分による<br class="sw-br--sp">しっとり感が評判となり<br>
+							「北海道のお土産」と持ち帰った<br class="sw-br--sp">道外の方からも<br>
 							リピーターが続出した一品です。<br>
 						</p>
 						<p class="lp-catch__innerTextBoxText">
@@ -136,7 +136,7 @@
 							北の春　ハンドクリーム
 						</h2>
 						<p class="lp-sales__innerTextBoxText">通販価格1500円（税込・送料込み）<br>
-							2本以上ご購入の場合(1本当たり<span class="lp-sales__innerTextBoxTextThrough">1500円</span>→<span class="lp-sales__innerTextBoxTextBargein">1400円</span>）<br>
+							2本以上ご購入の場合<br class="sw-br--tb">(1本当たり<span class="lp-sales__innerTextBoxTextThrough">1500円</span>→<span class="lp-sales__innerTextBoxTextBargein">1400円</span>）<br>
 							店頭参考価格：1300円</p>
 						<p class="lp-sales__innerTextBoxText">
 							※送料の関係上、1回の購入につきおひとり様5本までと限らせていただきます。<br>
@@ -163,7 +163,7 @@
 					</div>
 					<div class="lp-features__innerFlexBox lp-features__innerFlexBox02">
 						<img src="img/lp-features__innerFlexBoxImg02.png" alt="ひまわりと白樺" class="lp-features__innerFlexBoxImg lp-features__innerFlexBoxImg02">
-						<h3 class="lp-features__innerFlexBoxHead">2．保湿成分は植物由来（北海道産含む）、<br>
+						<h3 class="lp-features__innerFlexBoxHead">2．保湿成分は植物由来（北海道産含む）、<br class="sw-br--notTb">
 							鉱物油フリー</h3>
 						<p class="lp-features__innerFlexBoxText">
 							保湿成分も北海道産の成分が含まれております。<br>
@@ -245,7 +245,7 @@
 							北の春　ハンドクリーム
 						</h2>
 						<p class="lp-sales__innerTextBoxText">通販価格1500円（税込・送料込み）<br>
-							2本以上ご購入の場合(1本当たり<span class="lp-sales__innerTextBoxTextThrough">1500円</span>→<span class="lp-sales__innerTextBoxTextBargein">1400円</span>）<br>
+							2本以上ご購入の場合<br class="sw-br--tb">(1本当たり<span class="lp-sales__innerTextBoxTextThrough">1500円</span>→<span class="lp-sales__innerTextBoxTextBargein">1400円</span>）<br>
 							店頭参考価格：1300円</p>
 						<p class="lp-sales__innerTextBoxText">
 							※送料の関係上、1回の購入につきおひとり様5本までと限らせていただきます。<br>
