--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		</div>
 		
 	</header>
-	<main>
-		<section id="mv" class="lp-mv">
+	<main id="wrap">
+		<section id="mv" class="lp-mv lp-mv--01">
 			<div class="lp-mv__inner">
 				<div class="lp-mv__innerBox">
 					<h2 class="lp-mv__innerBoxHead"><img src="img/lp-mv__InnerBoxHeadImg.png" alt="さようなら、冬
@@ -278,6 +278,7 @@
     </div>
 		<div class="st-footer__copyright">&copy;KITANOHARU</div>
 </footer>
+<a href="#wrap" id="pageTop" class="sw-pageTop"><span></span></a>
 <script src="script.js"></script>
 </body>
 </html>
