どうしてもフェードアウトができない…

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		
 	</header>
 	<main id="wrap">
-		<section id="mv" class="lp-mv lp-mv--01">
+		<section id="mv" class="lp-mv">
 			<div class="lp-mv__inner">
 				<div class="lp-mv__innerBox">
 					<h2 class="lp-mv__innerBoxHead"><img src="img/lp-mv__InnerBoxHeadImg.png" alt="さようなら、冬
@@ -70,7 +70,11 @@
 				</li>
 				<li class="lp-mv__listItem lp-mv__listItem03"></li>
 			</ul>
-
+			<div class="lp-mv__pagination">
+				<span class="lp-mv__paginationBtn lp-mv__paginationBtn--01"></span>
+				<span class="lp-mv__paginationBtn lp-mv__paginationBtn--02"></span>
+				<span class="lp-mv__paginationBtn lp-mv__paginationBtn--03"></span>
+			</div>
 		</section>
 		<section id="winter" class="lp-winter">
 			<div class="lp-winter__inner">
