--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<span class="lp-mv__paginationBtn lp-mv__paginationBtn--03"></span>
 			</div>
 		</section>
-		<section id="winter" class="lp-winter">
+		<section id="winter" class="lp-winter js-animation">
 			<div class="lp-winter__inner">
 				<div class="lp-winter__inner">
 					<div class="lp-winter__innerBox">
@@ -92,12 +92,12 @@
 		</section>
 		<section id="spring" class="lp-spring">
 			<div class="lp-spring__inner">
-				<h2 class="lp-spring__innerHead">そんな北海道の手荒れに、<br>
+				<h2 class="lp-spring__innerHead js-animation">そんな北海道の手荒れに、<br>
 					少しでも早く春に訪れるよう、<br>
 					私たちは立ち上がりました。</h2>
-				<img src="img/lp-spring__innerImg--hand.png" alt="手" class="lp-spring__innerImg--hand">
-				<img src="img/lp-spring__innerImg--sakura01.png" alt="桜" class="lp-spring__innerImg--sakura01">
-				<img src="img/lp-spring__innerImg--sakura02.png" alt="桜" class="lp-spring__innerImg--sakura02">
+				<img src="img/lp-spring__innerImg--hand.png" alt="手" class="lp-spring__innerImg--hand  js-animation">
+				<img src="img/lp-spring__innerImg--sakura01.png" alt="桜" class="lp-spring__innerImg--sakura01  js-animation">
+				<img src="img/lp-spring__innerImg--sakura02.png" alt="桜" class="lp-spring__innerImg--sakura02  js-animation">
 			</div>
 		</section>
 		<section id="catch" class="lp-catch">
