大体のPCアニメーションはできた（あとは微調整）

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 		<section id="catch" class="lp-catch">
 			<div class="lp-catch__inner">
 				<div class="lp-catch__innerText">
-					<div class="lp-catch__innerTextBox">
+					<div class="lp-catch__innerTextBox js-animation">
 					<h2 class="lp-catch__innerTextBoxHead">
 							<img src="img/lp-catch__innerTboxHeadImg.png" alt="手から、春を感じてみませんか。" class="lp-catch__innerTextBoxHeadImg">
 							<img src="img/lp-catch__innerTboxHeadImgTb.png" alt="手から、春を感じてみませんか。" class="lp-catch__innerTextBoxHeadImgTb">
@@ -128,14 +128,14 @@
 					</div>
 				</div>
 				<!-- バックグラウンドで設定 -->
-				<div class="lp-catch__innerImg">
+				<div class="lp-catch__innerImg js-animation">
 				</div>
 			</div>
 		</section>
 		<section id="sales" class="lp-sales">
 			<div class="lp-sales__inner">
 				<div class="lp-sales__innerText">
-					<div class="lp-sales__innerTextBox">
+					<div class="lp-sales__innerTextBox js-animation">
 						<h2 class="lp-sales__innerTextBoxHead">
 							北の春　ハンドクリーム
 						</h2>
@@ -150,22 +150,22 @@
 					</div>					
 				</div>
 				<div class="lp-sales__innerIbox">
-					<img src="img/handcream.png" class="lp-sales__innerIboxImg">
+					<img src="img/handcream.png" class="lp-sales__innerIboxImg js-animation">
 				</div>
 			</div>
 		</section>
 		<section id="features" class="lp-features">
 			<div class="lp-features__inner">
-				<h2 class="lp-features__innerHead"><img src="img/lp-features__innerHeadImg.png" class="lp-features__innerHeadImg" alt="「北の春 ハンドクリーム」３つの特徴"><img src="img/lp-features__innerHeadImgTb.png" class="lp-features__innerHeadImgTb" alt="「北の春 ハンドクリーム」３つの特徴"></h2>
+				<h2 class="lp-features__innerHead js-animation"><img src="img/lp-features__innerHeadImg.png" class="lp-features__innerHeadImg" alt="「北の春 ハンドクリーム」３つの特徴"><img src="img/lp-features__innerHeadImgTb.png" class="lp-features__innerHeadImgTb" alt="「北の春 ハンドクリーム」３つの特徴"></h2>
 
 				<div class="lp-features__innerFlex">
-					<div class="lp-features__innerFlexBox lp-features__innerFlexBox01">
+					<div class="lp-features__innerFlexBox lp-features__innerFlexBox01 js-animation">
 						<img src="img/lp-features__innerFlexBoxImg01.png" alt="桜のイメージ" class="lp-features__innerFlexBoxImg lp-features__innerFlexBoxImg01">
 						<h3 class="lp-features__innerFlexBoxHead">１．春を感じさせる、北海道の桜の香り！</h3>
 						<p class="lp-features__innerFlexBoxText">ソメイヨシノ、オオヤマザクラの桜を使用した香りを使用しております（他の国産の桜の香りも使用しております）<br>
 							北海道の春の香りを、存分に感じてください。</p>
 					</div>
-					<div class="lp-features__innerFlexBox lp-features__innerFlexBox02">
+					<div class="lp-features__innerFlexBox lp-features__innerFlexBox02 js-animation">
 						<img src="img/lp-features__innerFlexBoxImg02.png" alt="ひまわりと白樺" class="lp-features__innerFlexBoxImg lp-features__innerFlexBoxImg02">
 						<h3 class="lp-features__innerFlexBoxHead">2．保湿成分は植物由来（北海道産含む）、<br class="sw-br--notTb">
 							鉱物油フリー</h3>
@@ -175,7 +175,7 @@
 	※自然成分が多く含まれておりますので、開封後はなるべくお早めにご使用ください。
 						</p>
 					</div>
-					<div class="lp-features__innerFlexBox lp-features__innerFlexBox03">
+					<div class="lp-features__innerFlexBox lp-features__innerFlexBox03 js-animation">
 						<img src="img/lp-features__innerFlexBoxImg03.png" alt="手" class="lp-features__innerFlexBoxImg lp-features__innerFlexBoxImg03">
 						<h3 class="lp-features__innerFlexBoxHead">3.低刺激性、合成着色料不使用</h3>
 						<p class="lp-features__innerFlexBoxText">肌の負担になる成分をなるべく減らしました。<br>
@@ -184,24 +184,24 @@
 							※すべての人にアレルギーが起こらないわけではありません。お肌に合わないときはご使用をおやめください。</p>
 					</div>
 				</div>
-				<img src="img/lp-features__innerImgSakura01.png" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura01">
-				<img src="img/lp-features__innerImgSakura02.png" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura02">
-				<img src="img/lp-features__innerImgSakura03.png" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura03">
+				<img src="img/lp-features__innerImgSakura01.png" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura01 js-animation">
+				<img src="img/lp-features__innerImgSakura02.png" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura02 js-animation">
+				<img src="img/lp-features__innerImgSakura03.png" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura03 js-animation">
 			</div>
 
 		</section>
 		<section id="voice" class="lp-voice">
 			<div class="lp-voice__inner">
-				<h2 class="lp-voice__innerHead"><img src="img/lp-voice__innerHeadImg.png" alt="お客様の声" class="lp-voice__innerHeadImg"></h2>
+				<h2 class="lp-voice__innerHead js-animation"><img src="img/lp-voice__innerHeadImg.png" alt="お客様の声" class="lp-voice__innerHeadImg"></h2>
 				<div class="lp-voice__innerFlex">
-					<div class="lp-voice__innerFlexBox">
+					<div class="lp-voice__innerFlexBox js-animation">
 						<img src="img/lp-voice__innerFlexBoxImg01.png" alt="北海道代表　北野春子さん（仮名）" class="lp-voice__innerFlexBoxImg lp-Evoice__innerFlexBoxImg01">
 						<h3 class="lp-voice__innerFlexBoxName">北海道代表　北野春子さん（仮名）</h3>
 						<p class="lp-voice__innerFlexBoxText">
 							手の乾燥と湿疹に悩まされていた私にとって、冬は「嫌い」以外の何物でもありませんでした。北海道の冬、長すぎますよね（泣）しかしこのクリームが、私の冬に対するイメージを変えてくれました。手がすべすべになって手荒れがなくなった分、心が晴れやかになりました。この桜のクリームの香りを感じるたび、冬でも北海道ももう春なのかと、錯覚してしまいます（笑）
 						</p>
 					</div>
-					<div class="lp-voice__innerFlexBox">
+					<div class="lp-voice__innerFlexBox js-animation">
 						<img src="img/lp-voice__innerFlexBoxImg02.png" alt="道外代表（東京都）　東川夏美さん（仮名）" class="lp-voice__innerFlexBoxImg lp-voice__innerFlexBoxImg02">
 						<h3 class="lp-voice__innerFlexBoxName">道外代表（東京都）　東川夏美さん（仮名）</h3>
 						<p class="lp-voice__innerFlexBoxText">東京はあまり雪は降りませんが、いつも手が冷えてパサついていました。最初は北海道のお土産として買いましたが、使ってみるとすっごくしっとり！しかもこの桜の香りは本州と少し違っていて…もう一度ほしいと思ったらオンラインでも販売されていて「やられた」という（笑）でも店舗販売が北海道だけなのはホントなので、やっぱり使うたび北海道（ココ大事）の春を感じています。</p>
@@ -212,27 +212,27 @@
 		</section>
 		<section id="shop" class="lp-shop">
 			<div class="lp-shop__inner">
-				<h2 class="lp-shop__innerHead"><img src="img/lp-shop__innerHead.png" alt="ショップ" class="lp-shop__innerHeadImg"></h2>
+				<h2 class="lp-shop__innerHead js-animation"><img src="img/lp-shop__innerHead.png" alt="ショップ" class="lp-shop__innerHeadImg"></h2>
 				<div class="lp-shop__innerFlex">
-					<div class="lp-shop__innerFlexStore">
-						<p class="lp-shop__innerFlexStoreText">
+					<div class="lp-shop__innerFlexStore js-animation">
+						<p class="lp-shop__innerFlexStoreText js-animation">
 							北海道の<br>
 							各コンビニエンスストア・<br>
 							ドラッグストア・<br>
 							PLALA・北海道ハンド・<br>
 							Raftなどにて販売しております。
 						</p>
-						<a class="sw-btn store pc">
+						<a class="sw-btn store pc js-animation">
 							<span class="sw-btn__inner">ショップを探す</span>
 						</a>
 					</div>
-					<div class="lp-shop__innerFlexOnline">
-						<p class="lp-shop__innerFlexOnlineText">
+					<div class="lp-shop__innerFlexOnline ">
+						<p class="lp-shop__innerFlexOnlineText js-animation">
 							もちろんオンラインでも<br>
 							お買い求め<br>
 							いただけます。
 						</p>
-						<a class="sw-btn buy pc">
+						<a class="sw-btn buy pc js-animation">
 							<span class="sw-btn__inner">ご購入はこちら</span>
 						</a>
 					</div>
@@ -244,7 +244,7 @@
 		<section id="sales" class="lp-sales">
 			<div class="lp-sales__inner">
 				<div class="lp-sales__innerText">
-					<div class="lp-sales__innerTextBox">
+					<div class="lp-sales__innerTextBox js-animation">
 						<h2 class="lp-sales__innerTextBoxHead">
 							北の春　ハンドクリーム
 						</h2>
@@ -259,7 +259,7 @@
 					</div>					
 				</div>
 				<div class="lp-sales__innerIbox">
-					<img src="img/handcream.png" class="lp-sales__innerIboxImg">
+					<img src="img/handcream.png" class="lp-sales__innerIboxImg js-animation">
 				</div>
 			</div>
 		</section>
