ヘッダーのスムーススクロール、クリック閉じる完了　残りはヘッダー・フッターPCのクリック時のスムース

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 	<header class="st-header">
     <div class="st-header__inner">
-        <h1 class="st-header__innerLogo"><a href="index.html" class="st-header__innerLogoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-header__innerLogoLinkImg"></a></h1>
+        <h1 class="st-header__innerLogo"><a href="#" class="st-header__innerLogoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-header__innerLogoLinkImg"></a></h1>
         <nav class="st-header__innerNav">
             <ul class="st-header__innerNavList">
-                <li class="st-header__innerNavListItem"><a href="#" class="st-header__innerNavListItemLink">トップ</a></li>
-                <li class="st-header__innerNavListItem"><a href="#" class="st-header__innerNavListItemLink">誕生の背景</a></li>
-                <li class="st-header__innerNavListItem"><a href="#" class="st-header__innerNavListItemLink">クリームの特徴</a></li>
-                <li class="st-header__innerNavListItem"><a href="#" class="st-header__innerNavListItemLink">お客様の声</a></li>
-                <li class="st-header__innerNavListItem"><a href="#" class="st-header__innerNavListItemLink">ショップ</a></li>
+                <li class="st-header__innerNavListItem"><a href="#wrap" class="st-header__innerNavListItemLink">トップ</a></li>
+                <li class="st-header__innerNavListItem"><a href="#winter" class="st-header__innerNavListItemLink">北海道の冬</a></li>
+                <li class="st-header__innerNavListItem"><a href="#features" class="st-header__innerNavListItemLink">3つの特徴</a></li>
+                <li class="st-header__innerNavListItem"><a href="#voice" class="st-header__innerNavListItemLink">お客様の声</a></li>
+                <li class="st-header__innerNavListItem"><a href="#shop" class="st-header__innerNavListItemLink">ショップ</a></li>
             </ul>
             <a href="#" class="sw-btn buy"><span class="sw-btn__inner">ご購入はこちら</span></a>
         	</nav>
@@ -25,21 +25,21 @@
 	</header>
 	<header class="st-headerSp">
     <div class="st-headerSp__inner">
-				<h1 class="st-headerSp__innerLogo"><a href="index.html" class="st-headerSp__innerlogoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-headerSp__innerLogoLinkImg"></a></h1>
+				<h1 class="st-headerSp__innerLogo"><a href="#" class="st-headerSp__innerlogoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-headerSp__innerLogoLinkImg"></a></h1>
 				<button id="hamburgerBtn" class="st-headerSp__innerBtn"><span class="st-headerSp__innerBtnBar"></span></button>
 		</div>
 		 <div class="st-headerSpMenu">
 		<!--<div class="st-headerSpMenu is-active"> -->
 			<nav class="st-headerSpMenuNav">
 				<ul class="st-headerSpMenuNavList">
-					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">トップ</a></li>
-					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">誕生の背景</a></li>
-					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">クリームの特徴</a></li>
-					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">お客様の声</a></li>
-					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">ショップ</a></li>
+					<li class="st-headerSpMenuNavListItem"><a href="#wrap" class="st-headerSpMenuNavListItemLink">トップ</a></li>
+					<li class="st-headerSpMenuNavListItem"><a href="#winter" class="st-headerSpMenuNavListItemLink">北海道の冬</a></li>
+					<li class="st-headerSpMenuNavListItem"><a href="#features" class="st-headerSpMenuNavListItemLink">3つの特徴</a></li>
+					<li class="st-headerSpMenuNavListItem"><a href="#voice" class="st-headerSpMenuNavListItemLink">お客様の声</a></li>
+					<li class="st-headerSpMenuNavListItem"><a href="#shop" class="st-headerSpMenuNavListItemLink">ショップ</a></li>
 				</ul>
-				<a class="sw-btn buy"><span class="sw-btn__inner">ご購入はこちら</span></a>
-				<div class="st-headerSpMenuNavSns"><a href="" class="st-headerSpMenuNavSnsLink"><img src="img/twitter.png" alt="" class="st-headerSpMenuNavSnsLinkImg"></a><a href="" class="st-headerSpMenuNavSnsLink"><img src="img/instagram.png" alt="" class="st-headerSpMenuNavSnsLinkImg"></a></div>
+				<a class="sw-btn buy" href="#"><span class="sw-btn__inner">ご購入はこちら</span></a>
+				<div class="st-headerSpMenuNavSns"><a href="#" class="st-headerSpMenuNavSnsLink"><img src="img/twitter.png" alt="" class="st-headerSpMenuNavSnsLinkImg"></a><a href="#" class="st-headerSpMenuNavSnsLink"><img src="img/instagram.png" alt="" class="st-headerSpMenuNavSnsLinkImg"></a></div>
 			</nav>
 			<button id="closeBtn" class="st-headerSpMenu__closeBtn">
 				<p class="st-headerSpMenu__closeBtnBar"><span></span></p>
