画像軽量化、一部HTML変更

--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
 				<h2 class="lp-voice__innerHead js-animation"><img src="img/lp-voice__innerHeadImg.png" alt="お客様の声" class="lp-voice__innerHeadImg"></h2>
 				<div class="lp-voice__innerFlex">
 					<div class="lp-voice__innerFlexBox js-animation">
-						<img src="img/lp-voice__innerFlexBoxImg01.png" alt="北海道代表　北野春子さん（仮名）" class="lp-voice__innerFlexBoxImg lp-Evoice__innerFlexBoxImg01">
+						<img src="img/lp-voice__innerFlexBoxImg01.jpg" alt="北海道代表　北野春子さん（仮名）" class="lp-voice__innerFlexBoxImg lp-Evoice__innerFlexBoxImg01">
 						<h3 class="lp-voice__innerFlexBoxName">北海道代表　北野春子さん（仮名）</h3>
 						<p class="lp-voice__innerFlexBoxText">
 							手の乾燥と湿疹に悩まされていた私にとって、冬は「嫌い」以外の何物でもありませんでした。北海道の冬、長すぎますよね（泣）しかしこのクリームが、私の冬に対するイメージを変えてくれました。手がすべすべになって手荒れがなくなった分、心が晴れやかになりました。この桜のクリームの香りを感じるたび、冬でも北海道ももう春なのかと、錯覚してしまいます（笑）
 						</p>
 					</div>
 					<div class="lp-voice__innerFlexBox js-animation">
-						<img src="img/lp-voice__innerFlexBoxImg02.png" alt="道外代表（東京都）　東川夏美さん（仮名）" class="lp-voice__innerFlexBoxImg lp-voice__innerFlexBoxImg02">
+						<img src="img/lp-voice__innerFlexBoxImg02.jpg" alt="道外代表（東京都）　東川夏美さん（仮名）" class="lp-voice__innerFlexBoxImg lp-voice__innerFlexBoxImg02">
 						<h3 class="lp-voice__innerFlexBoxName">道外代表（東京都）　東川夏美さん（仮名）</h3>
 						<p class="lp-voice__innerFlexBoxText">東京はあまり雪は降りませんが、いつも手が冷えてパサついていました。最初は北海道のお土産として買いましたが、使ってみるとすっごくしっとり！しかもこの桜の香りは本州と少し違っていて…もう一度ほしいと思ったらオンラインでも販売されていて「やられた」という（笑）でも店舗販売が北海道だけなのはホントなので、やっぱり使うたび北海道（ココ大事）の春を感じています。</p>
 					</div>
