--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 					<li class="st-headerSpMenuNavListItem"><a href="#voice" class="st-headerSpMenuNavListItemLink">お客様の声</a></li>
 					<li class="st-headerSpMenuNavListItem"><a href="#shop" class="st-headerSpMenuNavListItemLink">ショップ</a></li>
 				</ul>
-				<a class="sw-btn buy" href="#"><span class="sw-btn__inner">ご購入はこちら</span></a>
-				<div class="st-headerSpMenuNavSns"><a href="#" class="st-headerSpMenuNavSnsLink"><img src="img/twitter.png" alt="" class="st-headerSpMenuNavSnsLinkImg"></a><a href="#" class="st-headerSpMenuNavSnsLink"><img src="img/instagram.png" alt="" class="st-headerSpMenuNavSnsLinkImg"></a></div>
+				<a class="sw-btn buy" href="index.html"><span class="sw-btn__inner">ご購入はこちら</span></a>
+				<div class="st-headerSpMenuNavSns"><a href="index.html" class="st-headerSpMenuNavSnsLink"><img src="img/twitter.png" alt="" class="st-headerSpMenuNavSnsLinkImg"></a><a href="index.html" class="st-headerSpMenuNavSnsLink"><img src="img/instagram.png" alt="" class="st-headerSpMenuNavSnsLinkImg"></a></div>
 			</nav>
 			<button id="closeBtn" class="st-headerSpMenu__closeBtn">
 				<p class="st-headerSpMenu__closeBtnBar"><span></span></p>
@@ -238,8 +238,8 @@
 					</div>
 				</div>
 			</div>
-			<img src="img/sakura01_1.png" alt="桜01" class="lp-shop__Sakura lp-shop__Sakura01">
-			<img src="img/sakura01_2.png" alt="桜02" class="lp-shop__Sakura lp-shop__Sakura02">
+			<img src="img/sakura01_1.png" alt="桜01" class="lp-shop__Sakura lp-shop__Sakura01 js-animation">
+			<img src="img/sakura01_2.png" alt="桜02" class="lp-shop__Sakura lp-shop__Sakura02 js-animation">
 		</section>
 		<section id="sales" class="lp-sales">
 			<div class="lp-sales__inner">
