--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<header class="st-header">
     <div class="st-header__inner">
-        <h1 class="st-header__innerLogo"><a href="#" class="st-header__innerLogoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-header__innerLogoLinkImg"></a></h1>
+        <h1 class="st-header__innerLogo"><a href="#wrap" class="st-header__innerLogoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-header__innerLogoLinkImg"></a></h1>
         <nav class="st-header__innerNav">
             <ul class="st-header__innerNavList">
                 <li class="st-header__innerNavListItem"><a href="#wrap" class="st-header__innerNavListItemLink">トップ</a></li>
@@ -19,13 +19,13 @@
                 <li class="st-header__innerNavListItem"><a href="#voice" class="st-header__innerNavListItemLink">お客様の声</a></li>
                 <li class="st-header__innerNavListItem"><a href="#shop" class="st-header__innerNavListItemLink">ショップ</a></li>
             </ul>
-            <a href="#" class="sw-btn buy"><span class="sw-btn__inner">ご購入はこちら</span></a>
+            <a href="index.html" class="sw-btn buy"><span class="sw-btn__inner">ご購入はこちら</span></a>
         	</nav>
 			</div>
 	</header>
 	<header class="st-headerSp">
     <div class="st-headerSp__inner">
-				<h1 class="st-headerSp__innerLogo"><a href="#" class="st-headerSp__innerlogoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-headerSp__innerLogoLinkImg"></a></h1>
+				<h1 class="st-headerSp__innerLogo"><a href="#wrap" class="st-headerSp__innerlogoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-headerSp__innerLogoLinkImg"></a></h1>
 				<button id="hamburgerBtn" class="st-headerSp__innerBtn"><span class="st-headerSp__innerBtnBar"></span></button>
 		</div>
 		 <div class="st-headerSpMenu">
@@ -146,7 +146,7 @@
 							※送料の関係上、1回の購入につきおひとり様5本までと限らせていただきます。<br>
 	（6本以上注文する場合は再度申し込み願います）
 						</p>
-						<a href="#" class="sw-btn buy pc"><span class="sw-btn__inner">ご購入はこちら</span></a>
+						<a href="index.html" class="sw-btn buy pc"><span class="sw-btn__inner">ご購入はこちら</span></a>
 					</div>					
 				</div>
 				<div class="lp-sales__innerIbox">
@@ -255,7 +255,7 @@
 							※送料の関係上、1回の購入につきおひとり様5本までと限らせていただきます。<br>
 	（6本以上注文する場合は再度申し込み願います）
 						</p>
-						<a href="#" class="sw-btn buy pc"><span class="sw-btn__inner">ご購入はこちら</span></a>
+						<a href="index.html" class="sw-btn buy pc"><span class="sw-btn__inner">ご購入はこちら</span></a>
 					</div>					
 				</div>
 				<div class="lp-sales__innerIbox">
@@ -269,14 +269,14 @@
         <div class="st-footer__innerCompany">株式会社　北の春</div>
         <nav class="st-footer__innerNav">
             <ul class="st-footer__innerNavList">
-                <li class="st-footer__innerNavListItem"><a href="#" class="st-header__innerNavListItemLink">お問い合わせ</a></li>
-                <li class="st-footer__innerNavListItem"><a href="#" class="st-header__innerNavListItemLink">利用規約</a></li>
-                <li class="st-footer__innerNavListItem"><a href="#" class="st-header__innerNavListItemLink">特定商取引法に基づく表記</a></li>
-                <li class="st-footer__innerNavListItem"><a href="#" class="st-header__innerNavListItemLink">プライバシーポリシー</a></li>
+                <li class="st-footer__innerNavListItem"><a href="index.html" class="st-header__innerNavListItemLink">お問い合わせ</a></li>
+                <li class="st-footer__innerNavListItem"><a href="index.html" class="st-header__innerNavListItemLink">利用規約</a></li>
+                <li class="st-footer__innerNavListItem"><a href="index.html" class="st-header__innerNavListItemLink">特定商取引法に基づく表記</a></li>
+                <li class="st-footer__innerNavListItem"><a href="index.html" class="st-header__innerNavListItemLink">プライバシーポリシー</a></li>
             </ul>
             <div class="st-footer__innerNavSNS">
-                <a href="#" class="st-footer__innerNavSNSLink"><img src="img/twitter.png" alt=""></a>
-                <a href="#" class="st-footer__innerNavSNSLink"><img src="img/instagram.png" alt=""></a>
+                <a href="index.html" class="st-footer__innerNavSNSLink"><img src="img/twitter.png" alt=""></a>
+                <a href="index.html" class="st-footer__innerNavSNSLink"><img src="img/instagram.png" alt=""></a>
             </div>
         </nav>
     </div>
