ファビコン分

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>北の春 ハンドクリーム</title>
 	<link href="reset.css" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<header class="st-header">
